# Bevy-WGPU-2D

./: Cargo.toml  README.md  build.rs
assets/huntress/: animated_sprite.json  keyframes.json
src/: app.rs  asset.rs  buffers.rs  camera.rs  input.rs  lib.rs  memory.rs  player.rs  renderer.rs  sprite.rs
src/renderer/: gpu_primitives.rs  hitbox.rs  scene.rs  sprite.rs  texture.rs
