[package]
name = "erlking"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = "1.3"
failure = "0.1"
futures = "0.3"
winit = "0.22"
rand = "0.7.3"
shaderc = "0.6"
serde = { version = "1", features = ["derive"], optional = true }
gltf = { version = "0.15", default-features = false, features = ["utils"] }
thiserror = "1.0"
base64 = "0.12"
glam = "0.9"
log = "0.4"
ash = "0.31"
ash-window = "0.5.0"

[dependencies.cgmath]
version = "0.17"
features = ["swizzle"]


