[package]
name = "erlking"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"
winit = "0.24"
glam = "0.12"
log = "0.4"
wgpu = "0.7"
bevy_ecs = "0.5"
image = "0.23"
arrayvec = { version = "0.6", features = ["serde"] }
parry2d = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
shaderc = "0.7"

[features]
sprite-debug = []

[profile.dev]
split-debuginfo = "unpacked"